{
  "version": 4,
  "terraform_version": "1.10.4",
  "serial": 224,
  "lineage": "50af939e-a3ff-edc3-399a-b63c78e1e883",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_health_check",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-01-21T11:51:09.225-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-chany-wexelshtein/global/firewalls/allow-health-check",
            "log_config": [],
            "name": "allow-health-check",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-chany-wexelshtein/global/networks/default",
            "priority": 1000,
            "project": "terraform-chany-wexelshtein",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-chany-wexelshtein/global/firewalls/allow-health-check",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-01-21T11:51:08.753-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-chany-wexelshtein/global/firewalls/allow-http",
            "log_config": [],
            "name": "allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-chany-wexelshtein/global/networks/default",
            "priority": 1000,
            "project": "terraform-chany-wexelshtein",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-chany-wexelshtein/global/firewalls/allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-01-21T11:51:10.464-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-chany-wexelshtein/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-chany-wexelshtein/global/networks/default",
            "priority": 1000,
            "project": "terraform-chany-wexelshtein",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-chany-wexelshtein/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20250113",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/terraform-chany-wexelshtein/zones/me-west1-b/disks/chany-wexelshtein-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-01-21T11:51:11.577-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/terraform-chany-wexelshtein/zones/me-west1-b/instances/chany-wexelshtein-instance",
            "instance_id": "916060654113276992",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "5K6-feqLvzg=",
            "metadata_startup_script": "#!/bin/bash\n\n# Update package lists\nsudo apt-get update -y\n\n# Retry update if necessary\nif [ $? -ne 0 ]; then\n  sudo apt-get update --fix-missing -y\nfi\n\n# Install Nginx\nsudo apt-get install -y nginx\n\n# Install network-manager (includes nmcli)\nsudo apt-get install -y network-manager\n\n# Restart NetworkManager and systemd-networkd if needed\nsudo systemctl restart NetworkManager\nsudo systemctl restart systemd-networkd\n\n# Restart Nginx to ap [...]
            "name": "chany-wexelshtein-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.165.3.53",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/terraform-chany-wexelshtein/global/networks/default",
                "network_ip": "10.208.0.31",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/terraform-chany-wexelshtein/regions/me-west1/subnetworks/default",
                "subnetwork_project": "terraform-chany-wexelshtein"
              }
            ],
            "project": "terraform-chany-wexelshtein",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-chany-wexelshtein/zones/me-west1-b/instances/chany-wexelshtein-instance",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-http",
              "allow-ssh",
              "health-check"
            ],
            "tags_fingerprint": "B4can6Sxfuw=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "me-west1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ]
        }
      ]
    }
  ]
}